--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <title>Just Scan</title>
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.js"></script>
+
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
@@ -31,9 +33,9 @@
                 <a class="button" id="decodeButton">Decode</a>
             </div>
 
-            <div id="container">
-                <video autoplay="true" id="videoElement"></video>
-            </div>
+            <div id="camera" style="height:auto;width:auto; text-align:left;"></div>
+    <input type="button" value="Take a Snap and Download Picture" id="btPic" 
+        onclick="takeSnapShot()" />
 
             <div>
                 <img id="img" src="uploads/nivia.jpg" style="border: 1px solid gray" crossorigin="Anonymous"></img>
@@ -68,8 +70,9 @@
             console.log('ZXing code reader initialized')
 
             document.getElementById('decodeButton').addEventListener('click', () => {
-                var img = document.getElementById('img')
-                img.crossOrigin="Anonumous";
+                var img = Webcam.snap(function (data_uri) {
+                downloadImage('a', data_uri);
+            });
                 codeReader.decodeFromImage(img).then((result) => {
                     console.log(result)
                     document.getElementById('result').textContent = result.text
@@ -81,19 +84,29 @@
             })
 
         })
-    </script>
 
-    <script type="text/javascript">
-        var video = document.querySelector("#videoElement");
+    // CAMERA SETTINGS.
+        Webcam.set({
+            width: 220,
+            height: 190,
+            image_format: 'png',
+            jpeg_quality: 100
+        });
+        Webcam.attach('#camera');
 
-        if (navigator.mediaDevices.getUserMedia) {
-          navigator.mediaDevices.getUserMedia({ video: true })
-            .then(function (stream) {
-              video.srcObject = stream;
-            })
-            .catch(function (err0r) {
-              console.log("Something went wrong!");
+        // TAKE A SNAPSHOT.
+        takeSnapShot = function () {
+            Webcam.snap(function (data_uri) {
+                downloadImage('a', data_uri);
             });
+        }
+
+        // DOWNLOAD THE IMAGE.
+        downloadImage = function (name, datauri) {
+            var a = document.createElement('a');
+            a.setAttribute('download', name + '.png');
+            a.setAttribute('href', datauri);
+            a.click();
         }
     </script>
 
