--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
     <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+   
 </head>
 
 <body>
@@ -26,7 +26,7 @@
             <h1 class="title">Scan 1D/2D Bar Code</h1>
 
             <p>
-                <a class="button-small button-outline" href="./index.html">HOME 🏡</a>
+                <a class="button-small button-outline" href="#">HOME 🏡</a>
             </p>
 
             <div>
@@ -40,7 +40,7 @@
         onclick="takeSnapShot()" />
 
             <div>
-                <img id="img" src="uploads/WhatsApp Image 2020-04-30 at 12.24.04 AM.jpeg" style="border: 1px solid gray" crossorigin="Anonymous"></img>
+                <img id="img" src="public/uploads/shuttle.jpg" style="border: 1px solid gray" crossorigin="Anonymous"></img>
             </div>
 
             <label>Result:</label>
@@ -97,7 +97,7 @@
                 console.log(`Started decode for image from ${img.src}`)
             })
             document.getElementById('decodeButton').addEventListener('click',()=>{
-                window.location="/cheerio.js?qrcode="+ document.getElementById('result').textContent;
+                window.location="/../cheerio.js?qrcode="+ document.getElementById('result').textContent;
               //  alert( document.getElementById('result').textContent)
 
 
