--- a/public/displayprod.html
+++ b/public/displayprod.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>
+
+	</title>
 </head>
 <body>
+	<script type="text/javascript " src=""></script>
+wow
 
 </body>
 </html>
