--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         onclick="takeSnapShot()" />
 
             <div>
-                <img id="img" src="./uploads/WhatsApp Image 2020-04-30 at 12.24.04 AM.jpeg" style="border: 1px solid gray" crossorigin="Anonymous"></img>
+                <img id="img" src="./uploads/shuttle.jpg" style="border: 1px solid gray" crossorigin="Anonymous"></img>
             </div>
 
             <label>Result:</label>
