--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
                 <button id="decodeButton">Decode</button>
                 <canvas id="canvas" style="display: none;">
             </div>
+            <div>
+                <label>Result:</label> 
+                <pre><code id="result"></code></pre>
+            </div>
 
     </center>
 
