--- a/public/displayprod.html
+++ b/public/displayprod.html
@@ -1,21 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	</title>
-	
+    <title>Barcode</title>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-	
+    <!-- External StyleSheets -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
+    <link rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null" href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- External JavaScripts -->
+    <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.js"></script>
+    <script type="text/javascript" src="js/takesnapshot.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
 
-<link rel="stylesheet" href="css/bootstrap.css">
-<!-- Latest compiled JavaScript -->
-<script src="js/bootstrap.js"></script>
-	<script type="text/javascript">
+</head>
+<body>
+	<div class="container">
+
+		<main class="wrapper_result">
+	       
+	     <center>
+
+	        <div>
+	            <h1> Results </h1>
+	        </div>
+
+	        <div id="div1">
+				<table class="table table-hover table-bordered">
+					<thead class="thead-dark">
+		  				<tr>
+							<th scope="col">#</th>
+							<th scope="col">IMAGE</th>
+							<th scope="col">PRODUCT</th>
+							<th scope="col">COST</th>
+		  				</tr>
+					</thead>
+					<tbody id="table">
+					</tbody>
+	  			</table>
+			</div>            
+
+	    </center>
+
+	        <hr class="foot">
+	        <footer class="footer">
+	            <p> Contribute at <a href='https://github.com/karry26/Barcode'>Github</a></p>
+	        </footer>
+
+	    </main>
+	</div>
+
+<script type="text/javascript">
 	$(document).ready(function() {
 		var url=document.location.href
 		params=url.split('?')[1]
@@ -64,26 +108,6 @@
 	}
 });
 </script>
-</head>
-<body>
-	<script type="text/javascript " src=""></script>
 
-<p id="para"></p>
-<div id="div1" class="container">
-<table class="table table-dark table-striped">
-	<thead >
-	  <tr>
-		<th scope="col">#</th>
-		<th scope="col">First</th>
-		<th scope="col">Last</th>
-		<th scope="col">Handle</th>
-	  </tr>
-	</thead>
-	<tbody id="table">
-	 
-	  
-	</tbody>
-  </table>
-</div>
 </body>
 </html>
