--- a/public/displayprod.html
+++ b/public/displayprod.html
@@ -93,6 +93,8 @@
 				var name1=document.createElement("td");
 				name1.innerHTML=jsonAry[index[i]].prodname;
 				item.append(name1)
+				name1.innerHTML=jsonAry[index[i]].price;
+				item.append(name1)
 				/*
 				name1.innerHTML=jsonAry[index[i]].link;
 				item.append(name1)*/
